tests/rosetta/transpiler/FS/continued-fraction.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/continued-fraction.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Continued-fraction' based on the file name 'continued-fraction.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/continued-fraction.fs(43,18): error FS0001: This expression was expected to have type
    Map<string,int> array    
but here has type
    Map<'a,'b>    

/workspace/mochi/tests/rosetta/transpiler/FS/continued-fraction.fs(59,18): error FS0001: This expression was expected to have type
    Map<string,int> array    
but here has type
    Map<'a,'b>    

/workspace/mochi/tests/rosetta/transpiler/FS/continued-fraction.fs(61,18): error FS0001: This expression was expected to have type
    Map<string,int> array    
but here has type
    Map<'a,'b>    

/workspace/mochi/tests/rosetta/transpiler/FS/continued-fraction.fs(78,18): error FS0001: This expression was expected to have type
    Map<string,int> array    
but here has type
    Map<'a,'b>    
